# top-textbooks-service

./: Dockerfile  README.md  alma_config.yaml  pyproject.toml
docs/: SampleTests.md
docs/adr/: 0001-record-architecture-decisions.md  0002-design-assumptions.md
src/equipment_availability/: __init__.py  processor.py  server.py  web.py
tests/equipment_availability/: equipment_processor_test.py
tests/resources/equipment_availability/: retrieve_bib_loan_200_response_with_due_date.xml  retrieve_bibs_200_response_available.xml  retrieve_bibs_200_response_unavailable_with_due_date.xml
